add scaffold for controller test
some cleanup
